@@ -1,7 +1,5 @@
 package se.nackademin.cinema;
 
-import java.io.BufferedReader;
-import java.io.BufferedWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -17,7 +15,6 @@ import java.util.stream.IntStream;
 
 public class Cinema {
 
-    private static final int SEAT_PRICE = 150;
     private static final int COLUMN_SIZE = 8;
     private static final int ROW_SIZE = 8;
     private static final String BOOKED_SEATS_FILE = "dataFiles\\bookedSeats\\bookedSeats.txt";
@@ -25,15 +22,17 @@ public class Cinema {
 
     private final String movieTitle;
     private final Set<Seat> seats;
+    private final FileHandler fileHandler;
 
-    public Cinema(String movieTitle) {
+    public Cinema(String movieTitle, double ticketPrice) {
+        this.fileHandler = new TextFileHandler();
         this.movieTitle = movieTitle;
 
         IntFunction<Seat> seatNameGenerator = i -> {
             char row = (char) ('A' + i / COLUMN_SIZE);
             int column = i % COLUMN_SIZE + 1;
             String seatNumber = String.format("%s%02d", row, column);
-            return new Seat(seatNumber, SEAT_PRICE);
+            return new Seat(seatNumber, ticketPrice);
         };
 
         seats = IntStream.range(0, ROW_SIZE * COLUMN_SIZE)
@@ -103,10 +102,6 @@ public class Cinema {
     }
 
     void printSeatsTable() {
-        final String RED = "\u001B[31m";
-        final String GREEN = "\u001B[32m";
-        final String WHITE = "\u001B[0m";
-
         final String MESSAGE = "Seats Available:";
         final String FREE = "%s[%s]";
         final String TAKEN = "%s[ X ]";
@@ -115,9 +110,9 @@ public class Cinema {
         seats.forEach(seat -> {
             Seat currentSeat = getSeat(seat.getNumber());
             if (currentSeat != null) {
-                String seatCell = (!currentSeat.isBooked()) ? FREE.formatted(GREEN, seat.getNumber()) : TAKEN.formatted(RED);
+                String seatCell = (!currentSeat.isBooked()) ? FREE.formatted(ANSI.GREEN, seat.getNumber()) : TAKEN.formatted(ANSI.RED);
                 System.out.print(seatCell);
-                System.out.print(WHITE); // Reset color to default
+                System.out.print(ANSI.RESET);
                 if (currentSeat.getNumber().endsWith(String.valueOf(COLUMN_SIZE)))
                     System.out.println();
             }
@@ -126,61 +121,39 @@ public class Cinema {
 
     void printTicket(List<String> fileData) {
         String fileName = generatePersonalizedTicket(fileData);
-        final Path filePath = Paths.get(TICKETS_DIRECTORY + fileName);
-
-        try (var writer = Files.newBufferedWriter(filePath, StandardOpenOption.CREATE)) {
-            for (String line : fileData) {
-                writer.write(line);
-                writer.newLine();
-            }
-        } catch (IOException e) {
-            System.out.println("Error while printing ticket: " + e.getMessage());
-            e.printStackTrace();
-        }
+        final Path PATH = Paths.get(TICKETS_DIRECTORY + fileName);
+        fileHandler.save(PATH, fileData, StandardOpenOption.CREATE);
     }
 
     private void loadBookedSeats() {
-        try (var reader = Files.newBufferedReader(Paths.get(BOOKED_SEATS_FILE))) {
-            reader.lines()
-                    .filter(line -> line.startsWith(movieTitle))
-                    .findFirst()
-                    .ifPresent(bookedSeats -> Arrays.stream(bookedSeats.split(" "))
-                            .forEach(seatNumber -> {
-                                Seat currentSeat = getSeat(seatNumber);
-                                if (currentSeat != null)
-                                    getSeat(seatNumber).bookSeat(true);
-                            }));
-        } catch (IOException e) {
-            System.out.println("Error while loading booked seat: " + e.getMessage());
-            e.printStackTrace();
-        }
+        fileHandler.load(Paths.get(BOOKED_SEATS_FILE))
+                .stream()
+                .filter(line -> line.startsWith(movieTitle))
+                .findFirst()
+                .ifPresent(bookedSeats -> Arrays.stream(bookedSeats.split(" "))
+                        .forEach(seatNumber -> {
+                            Seat currentSeat = getSeat(seatNumber);
+                            if (currentSeat != null)
+                                getSeat(seatNumber).bookSeat(true);
+                        }));
     }
 
 
     private void saveBookedSeat(Seat seat) {
-        Path path = Paths.get(BOOKED_SEATS_FILE);
-        try (BufferedReader reader = Files.newBufferedReader(path);
-             BufferedWriter writer = Files.newBufferedWriter(path, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+        final Path path = Paths.get(BOOKED_SEATS_FILE);
+        List<String> lines = fileHandler.load(path);
+        boolean movieExists = lines.stream().anyMatch(line -> line.startsWith(movieTitle));
 
-            List<String> lines = reader.lines().collect(Collectors.toList());
-            boolean movieExists = lines.stream().anyMatch(line -> line.startsWith(movieTitle));
+        if (movieExists) {
+            lines = lines.stream()
+                    .map(line -> line.startsWith(movieTitle)
+                            ? line + " " + seat.getNumber() + " "
+                            : line)
+                    .toList();
+        } else
+            lines.add("%s %S ".formatted(movieTitle, seat.getNumber()));
 
-            if (movieExists) {
-                lines = lines.stream()
-                        .filter(line -> line.startsWith(movieTitle))
-                        .map(line -> line.concat("%S ".formatted(seat)))
-                        .toList();
-            } else
-                lines.add("%s %S ".formatted(movieTitle, seat.getNumber()));
-
-            for (String line : lines) {
-                writer.write(line);
-                writer.newLine();
-            }
-        } catch (IOException e) {
-            System.out.println("Error while saving booked seat: " + e.getMessage());
-            e.printStackTrace();
-        }
+        fileHandler.save(path, lines, StandardOpenOption.CREATE);
     }
 
 
@@ -224,23 +197,14 @@ public class Cinema {
     }
 
     private void removeBookedSeat(Seat seat) {
-        final Path PATH = Paths.get(BOOKED_SEATS_FILE);
-        try (var reader = Files.newBufferedReader(PATH);
-             var writer = Files.newBufferedWriter(PATH, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
+        final Path path = Paths.get(BOOKED_SEATS_FILE);
+        List<String> lines = fileHandler.load(path);
 
-            List<String> bookedSeatData = reader.lines()
-                    .filter(line -> line.startsWith(movieTitle))
-                    .map(line -> line.replace(seat.getNumber(), ""))
-                    .toList();
+        lines = lines.stream()
+                .map(line -> line.startsWith(movieTitle) ? line.replace(seat.getNumber(), "") : line)
+                .toList();
 
-            for (String line : bookedSeatData) {
-                writer.write(line);
-                writer.newLine();
-            }
-        } catch (IOException e) {
-            System.out.println("Error while updating the booked seat: " + e.getMessage());
-            e.printStackTrace();
-        }
+        fileHandler.save(path, lines, StandardOpenOption.CREATE);
     }
 
     public String generatePersonalizedTicket(List<String> fileData) {
